test/files/neg/t10207.check
t10207.scala:14: error: too many arguments (found 2, expected 1) for method apply: (key: Int): scala.collection.mutable.ArrayBuffer[String] in trait MapOps
  m(1, (_ => empty)) ++= AB("eins", "uno")
          ^
1 error
